--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting numpy\n",
+      "  Downloading numpy-2.2.3-cp311-cp311-win_amd64.whl.metadata (60 kB)\n",
+      "     ---------------------------------------- 0.0/60.8 kB ? eta -:--:--\n",
+      "     -------------------- ------------------- 30.7/60.8 kB ? eta -:--:--\n",
+      "     -------------------- ------------------- 30.7/60.8 kB ? eta -:--:--\n",
+      "     ------------------------------- ------ 51.2/60.8 kB 327.7 kB/s eta 0:00:01\n",
+      "     -------------------------------------- 60.8/60.8 kB 324.4 kB/s eta 0:00:00\n",
+      "Downloading numpy-2.2.3-cp311-cp311-win_amd64.whl (12.9 MB)\n",
+      "   ---------------------------------------- 0.0/12.9 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 0.0/12.9 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 0.0/12.9 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 0.1/12.9 MB 5.1 MB/s eta 0:00:03\n",
+      "   ---------------------------------------- 0.1/12.9 MB 5.1 MB/s eta 0:00:03\n",
+      "   ---------------------------------------- 0.1/12.9 MB 5.1 MB/s eta 0:00:03\n",
+      "   - -------------------------------------- 0.3/12.9 MB 1.6 MB/s eta 0:00:09\n",
+      "   -- ------------------------------------- 0.7/12.9 MB 2.9 MB/s eta 0:00:05\n",
+      "   -- ------------------------------------- 0.7/12.9 MB 2.9 MB/s eta 0:00:05\n",
+      "   -- ------------------------------------- 0.7/12.9 MB 2.0 MB/s eta 0:00:07\n",
+      "   ----- ---------------------------------- 1.6/12.9 MB 4.2 MB/s eta 0:00:03\n",
+      "   -------- ------------------------------- 2.9/12.9 MB 6.5 MB/s eta 0:00:02\n",
+      "   -------- ------------------------------- 2.9/12.9 MB 6.5 MB/s eta 0:00:02\n",
+      "   -------- ------------------------------- 2.9/12.9 MB 6.5 MB/s eta 0:00:02\n",
+      "   ------------ --------------------------- 4.0/12.9 MB 6.9 MB/s eta 0:00:02\n",
+      "   ---------------- ----------------------- 5.5/12.9 MB 8.8 MB/s eta 0:00:01\n",
+      "   ----------------- ---------------------- 5.7/12.9 MB 8.8 MB/s eta 0:00:01\n",
+      "   ----------------- ---------------------- 5.7/12.9 MB 8.8 MB/s eta 0:00:01\n",
+      "   ----------------- ---------------------- 5.7/12.9 MB 8.8 MB/s eta 0:00:01\n",
+      "   ---------------------- ----------------- 7.3/12.9 MB 9.2 MB/s eta 0:00:01\n",
+      "   -------------------------- ------------- 8.4/12.9 MB 10.4 MB/s eta 0:00:01\n",
+      "   -------------------------- ------------- 8.4/12.9 MB 10.4 MB/s eta 0:00:01\n",
+      "   -------------------------- ------------- 8.4/12.9 MB 10.4 MB/s eta 0:00:01\n",
+      "   ------------------------------ --------- 10.0/12.9 MB 10.0 MB/s eta 0:00:01\n",
+      "   ----------------------------------- ---- 11.5/12.9 MB 15.6 MB/s eta 0:00:01\n",
+      "   ----------------------------------- ---- 11.6/12.9 MB 15.2 MB/s eta 0:00:01\n",
+      "   ----------------------------------- ---- 11.6/12.9 MB 15.2 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  12.9/12.9 MB 13.4 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  12.9/12.9 MB 13.4 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 12.9/12.9 MB 12.4 MB/s eta 0:00:00\n",
+      "Installing collected packages: numpy\n",
+      "Successfully installed numpy-2.2.3\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 25.0.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install numpy\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here] \n",
+    "import numpy as np\n",
+    "\n"
    ]
   },
   {
@@ -34,11 +102,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.2.3\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print (np.__version__)\n"
    ]
   },
   {
@@ -51,11 +128,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a=np.random.randint(100,size=(2,3,5))"
    ]
   },
   {
@@ -68,11 +146,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[62 36 43 26  9]\n",
+      "  [36 16 75 43 95]\n",
+      "  [96 71 94  8 16]]\n",
+      "\n",
+      " [[23 67  5 98 58]\n",
+      "  [26 63  4 67 72]\n",
+      "  [92 52 90 19 50]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(a)"
    ]
   },
   {
@@ -85,11 +178,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b = np.ones((5, 2, 3))\n",
+    "\n"
    ]
   },
   {
@@ -102,11 +197,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(b)"
    ]
   },
   {
@@ -119,11 +236,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Do a and b have the same shape? False\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "are_shapes_equal = a.shape == b.shape\n",
+    "print(f\"Do a and b have the same shape? {are_shapes_equal}\")\n"
    ]
   },
   {
@@ -136,11 +263,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arrays cannot be added due to shape mismatch.\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "if a.shape==b.shape:\n",
+    "   result(a+b)\n",
+    "   print (\"Addition successful!\")\n",
+    "else:\n",
+    "   print(\"Arrays cannot be added due to shape mismatch.\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -154,11 +296,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "c = np.transpose(b, (1, 2, 0))\n",
+    "\n"
    ]
   },
   {
@@ -171,11 +315,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[63. 37. 44. 27. 10.]\n",
+      "  [37. 17. 76. 44. 96.]\n",
+      "  [97. 72. 95.  9. 17.]]\n",
+      "\n",
+      " [[24. 68.  6. 99. 59.]\n",
+      "  [27. 64.  5. 68. 73.]\n",
+      "  [93. 53. 91. 20. 51.]]]\n",
+      "Addition successful!\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "d = a + c\n",
+    "print(d)\n",
+    "print(\"Addition successful!\")\n"
    ]
   },
   {
@@ -188,11 +350,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[62 36 43 26  9]\n",
+      "  [36 16 75 43 95]\n",
+      "  [96 71 94  8 16]]\n",
+      "\n",
+      " [[23 67  5 98 58]\n",
+      "  [26 63  4 67 72]\n",
+      "  [92 52 90 19 50]]]\n",
+      "[[[63. 37. 44. 27. 10.]\n",
+      "  [37. 17. 76. 44. 96.]\n",
+      "  [97. 72. 95.  9. 17.]]\n",
+      "\n",
+      " [[24. 68.  6. 99. 59.]\n",
+      "  [27. 64.  5. 68. 73.]\n",
+      "  [93. 53. 91. 20. 51.]]]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
+    "print(a)\n",
+    "print(d)\n",
+    "print(\"\")\n",
     "\n"
    ]
   },
@@ -206,11 +393,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multiplication successful!\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "e = a * c\n",
+    "print(\"Multiplication successful!\")\n",
+    "\n"
    ]
   },
   {
@@ -224,12 +422,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is e equal to a? True\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "are_equal = np.array_equal(a, e)\n",
+    "print(f\"Is e equal to a? {are_equal}\")\n"
    ]
   },
   {
@@ -243,11 +450,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max value in d: 99.0\n",
+      "Min value in d: 5.0\n",
+      "Mean value in d: 51.4\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
+    "d_max = np.max(d)\n",
+    "d_min = np.min(d)\n",
+    "d_mean = np.mean(d)\n",
+    "\n",
+    "\n",
+    "print(f\"Max value in d: {d_max}\")\n",
+    "print(f\"Min value in d: {d_min}\")\n",
+    "print(f\"Mean value in d: {d_mean}\")\n",
     "\n"
    ]
   },
@@ -261,11 +486,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[63. 37. 44. 27. 10.]\n",
+      "  [37. 17. 76. 44. 96.]\n",
+      "  [97. 72. 95.  9. 17.]]\n",
+      "\n",
+      " [[24. 68.  6. 99. 59.]\n",
+      "  [27. 64.  5. 68. 73.]\n",
+      "  [93. 53. 91. 20. 51.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "f = np.empty_like(d)\n",
+    "print(f)"
    ]
   },
   {
@@ -287,11 +528,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[63. 25. 25. 25. 25.]\n",
+      "  [25. 25. 76. 25. 96.]\n",
+      "  [97. 72. 95. 25. 25.]]\n",
+      "\n",
+      " [[25. 68. 25. 99. 59.]\n",
+      "  [25. 64.  5. 68. 73.]\n",
+      "  [93. 53. 91. 25. 25.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "f[(d > d_min) & (d < d_mean)] = 25\n",
+    "\n",
+    "print(f)\n",
+    "\n"
    ]
   },
   {
@@ -325,11 +585,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[63. 37. 44. 27. 10.]\n",
+      "  [37. 17. 76. 44. 96.]\n",
+      "  [97. 72. 95.  9. 17.]]\n",
+      "\n",
+      " [[24. 68.  6. 99. 59.]\n",
+      "  [27. 64.  5. 68. 73.]\n",
+      "  [93. 53. 91. 20. 51.]]]\n",
+      "[[[63. 25. 25. 25. 25.]\n",
+      "  [25. 25. 76. 25. 96.]\n",
+      "  [97. 72. 95. 25. 25.]]\n",
+      "\n",
+      " [[25. 68. 25. 99. 59.]\n",
+      "  [25. 64.  5. 68. 73.]\n",
+      "  [93. 53. 91. 25. 25.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print (d)\n",
+    "print (f)"
    ]
   },
   {
@@ -350,11 +633,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array with labeled values:\n",
+      "[[['D' 'B' 'B' 'B' 'B']\n",
+      "  ['B' 'B' 'D' 'B' 'D']\n",
+      "  ['D' 'D' 'D' 'B' 'B']]\n",
+      "\n",
+      " [['B' 'D' 'B' 'D' 'D']\n",
+      "  ['B' 'D' 'A' 'D' 'D']\n",
+      "  ['D' 'D' 'D' 'B' 'B']]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]"
+    "### [your code here]\n",
+    "labels = [\"A\", \"B\", \"C\", \"D\", \"E\"]\n",
+    "\n",
+    "\n",
+    "f_str = np.empty_like(f, dtype=\"<U1\")  \n",
+    "\n",
+    "\n",
+    "d_min = np.min(d)\n",
+    "d_mean = np.mean(d)\n",
+    "\n",
+    "\n",
+    "f_str[(d > d_min) & (d < d_mean)] = \"B\"\n",
+    "f_str[d >= d_mean] = \"D\"\n",
+    "f_str[d <= d_min] = \"A\"\n",
+    "\n",
+    "\n",
+    "print(\"Array with labeled values:\")\n",
+    "print(f_str)"
    ]
   }
  ],
@@ -374,9 +689,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
