--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "import numpy as np\n"
    ]
   },
   {
@@ -34,11 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.24.1\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(np.__version__)"
    ]
   },
   {
@@ -51,11 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "\n",
+    "\n",
+    "a = np.random.rand(2,3,5) # random\n",
+    "a2 = np.random.randint(low=0, high=100, size=(2, 3, 5)) #random integers\n",
+    "a3 = np.random.randn(2,3,5)  #normal distribution\n",
+    "\n"
    ]
   },
   {
@@ -68,11 +83,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.03603205 0.32622793 0.76755201 0.22657145 0.03607696]\n",
+      "  [0.30631933 0.24346376 0.14202934 0.33594679 0.35293681]\n",
+      "  [0.74846405 0.54312228 0.87561326 0.80882994 0.80692789]]\n",
+      "\n",
+      " [[0.63661704 0.26738321 0.61149809 0.46729431 0.93275384]\n",
+      "  [0.09732154 0.25129205 0.22602031 0.69394947 0.79843082]\n",
+      "  [0.57320044 0.90105587 0.0023414  0.25067835 0.24640423]]]\n",
+      "[[[42  9 56 27 33]\n",
+      "  [ 5 78 60  8 94]\n",
+      "  [35 72 85 31 15]]\n",
+      "\n",
+      " [[70 70 95 61 33]\n",
+      "  [51 97  5 44 54]\n",
+      "  [39 13  1 65 67]]]\n",
+      "[[[-0.88865644  0.711199    1.15606955 -0.83001708  0.24845695]\n",
+      "  [ 0.4356947  -0.28229373 -1.71333889  0.40103155  0.90508492]\n",
+      "  [ 0.33394599  0.01723525 -3.02583812  1.13040174 -0.46172913]]\n",
+      "\n",
+      " [[-0.83638343  0.21249555 -0.79382412 -0.51240501  1.70575814]\n",
+      "  [ 1.30067262  0.25599023 -0.11294832  0.41527694  1.79685815]\n",
+      "  [-0.01628515  1.88232589  0.98477062 -0.75251403 -1.06173301]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "\n",
+    "print(a)\n",
+    "print(a2)\n",
+    "print(a3)"
    ]
   },
   {
@@ -85,11 +131,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "\n",
+    "b = np.ones((5,2,3))"
    ]
   },
   {
@@ -102,11 +149,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "\n",
+    "print(b)"
    ]
   },
   {
@@ -119,11 +188,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "same size\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "\n",
+    "if a.size == b.size:\n",
+    "    print(\"same size\")\n",
+    "\n",
+    "else:\n",
+    "    print(\"not same size\")\n"
    ]
   },
   {
@@ -136,11 +218,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "# No, because thir shapes are not compatible.\n"
    ]
   },
   {
@@ -148,17 +230,39 @@
    "metadata": {},
    "source": [
     "\n",
-    "\n",
     "### 9. Transpose b so that it has the same structure of a (i.e. become a 2x3x5 array). Assign the transposed array to varialbe \"c\".\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1., 1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1., 1.]]])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "# a -> 2 3 5\n",
+    "# b -> 5 2 3\n",
+    "\n",
+    "\n",
+    "c = np.transpose(b, (1, 2, 0))\n",
+    "\n",
+    "c\n"
    ]
   },
   {
@@ -171,11 +275,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1.03603205, 1.32622793, 1.76755201, 1.22657145, 1.03607696],\n",
+       "        [1.30631933, 1.24346376, 1.14202934, 1.33594679, 1.35293681],\n",
+       "        [1.74846405, 1.54312228, 1.87561326, 1.80882994, 1.80692789]],\n",
+       "\n",
+       "       [[1.63661704, 1.26738321, 1.61149809, 1.46729431, 1.93275384],\n",
+       "        [1.09732154, 1.25129205, 1.22602031, 1.69394947, 1.79843082],\n",
+       "        [1.57320044, 1.90105587, 1.0023414 , 1.25067835, 1.24640423]]])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "d = a + c\n",
+    "\n",
+    "d"
    ]
   },
   {
@@ -188,12 +311,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.03603205 0.32622793 0.76755201 0.22657145 0.03607696]\n",
+      "  [0.30631933 0.24346376 0.14202934 0.33594679 0.35293681]\n",
+      "  [0.74846405 0.54312228 0.87561326 0.80882994 0.80692789]]\n",
+      "\n",
+      " [[0.63661704 0.26738321 0.61149809 0.46729431 0.93275384]\n",
+      "  [0.09732154 0.25129205 0.22602031 0.69394947 0.79843082]\n",
+      "  [0.57320044 0.90105587 0.0023414  0.25067835 0.24640423]]]\n",
+      "[[[1.03603205 1.32622793 1.76755201 1.22657145 1.03607696]\n",
+      "  [1.30631933 1.24346376 1.14202934 1.33594679 1.35293681]\n",
+      "  [1.74846405 1.54312228 1.87561326 1.80882994 1.80692789]]\n",
+      "\n",
+      " [[1.63661704 1.26738321 1.61149809 1.46729431 1.93275384]\n",
+      "  [1.09732154 1.25129205 1.22602031 1.69394947 1.79843082]\n",
+      "  [1.57320044 1.90105587 1.0023414  1.25067835 1.24640423]]]\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "\n",
+    "print(a)\n",
+    "print(d)\n",
+    "\n",
+    "# values inside a and d have been added"
    ]
   },
   {
@@ -206,11 +354,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.03603205, 0.32622793, 0.76755201, 0.22657145, 0.03607696],\n",
+       "        [0.30631933, 0.24346376, 0.14202934, 0.33594679, 0.35293681],\n",
+       "        [0.74846405, 0.54312228, 0.87561326, 0.80882994, 0.80692789]],\n",
+       "\n",
+       "       [[0.63661704, 0.26738321, 0.61149809, 0.46729431, 0.93275384],\n",
+       "        [0.09732154, 0.25129205, 0.22602031, 0.69394947, 0.79843082],\n",
+       "        [0.57320044, 0.90105587, 0.0023414 , 0.25067835, 0.24640423]]])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "\n",
+    "e = a * c\n",
+    "\n",
+    "e"
    ]
   },
   {
@@ -224,11 +392,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n",
+    "# yes, because we multiplied with 1\n",
     "\n"
    ]
   },
@@ -243,12 +411,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.9327538381581282\n",
+      "1.002341402895092\n",
+      "1.4504118272315794\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "\n",
+    "d_max = np.max(d)\n",
+    "d_min = np.min(d)\n",
+    "d_mean = np.mean(d)\n",
+    "\n",
+    "print(d_max)\n",
+    "print(d_min)\n",
+    "print(d_mean)"
    ]
   },
   {
@@ -261,11 +445,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "f = np.empty((2,3,5))\n"
    ]
   },
   {
@@ -287,11 +471,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[25., 25., 75., 25., 25.],\n",
+       "        [25., 25., 25., 25., 25.],\n",
+       "        [75., 75., 75., 75., 75.]],\n",
+       "\n",
+       "       [[75., 25., 75., 75., 50.],\n",
+       "        [25., 25., 25., 75., 75.],\n",
+       "        [75., 75.,  0., 25., 25.]]])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "\n",
+    "f[(d == d_min)] = 0\n",
+    "f[(d > d_min) & (d < d_mean)] = 25\n",
+    "f[(d == d_mean)] = 50\n",
+    "f[(d > d_mean) & (d < d_max)] = 75\n",
+    "f[(d == d_max)] = 50\n",
+    "\n",
+    "# this technique is called boolen indexing\n",
+    "\n",
+    "\n",
+    "\n",
+    "f"
    ]
   },
   {
@@ -325,11 +537,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.03603205 1.32622793 1.76755201 1.22657145 1.03607696]\n",
+      "  [1.30631933 1.24346376 1.14202934 1.33594679 1.35293681]\n",
+      "  [1.74846405 1.54312228 1.87561326 1.80882994 1.80692789]]\n",
+      "\n",
+      " [[1.63661704 1.26738321 1.61149809 1.46729431 1.93275384]\n",
+      "  [1.09732154 1.25129205 1.22602031 1.69394947 1.79843082]\n",
+      "  [1.57320044 1.90105587 1.0023414  1.25067835 1.24640423]]]\n",
+      "[[[25. 25. 75. 25. 25.]\n",
+      "  [25. 25. 25. 25. 25.]\n",
+      "  [75. 75. 75. 75. 75.]]\n",
+      "\n",
+      " [[75. 25. 75. 75. 50.]\n",
+      "  [25. 25. 25. 75. 75.]\n",
+      "  [75. 75.  0. 25. 25.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(d)\n",
+    "print(f)\n",
+    "\n",
+    "#yes"
    ]
   },
   {
@@ -350,11 +586,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[['B', 'B', 'D', 'B', 'B'],\n",
+       "        ['B', 'B', 'B', 'B', 'B'],\n",
+       "        ['D', 'D', 'D', 'D', 'D']],\n",
+       "\n",
+       "       [['D', 'B', 'D', 'D', 'E'],\n",
+       "        ['B', 'B', 'B', 'D', 'D'],\n",
+       "        ['D', 'D', 'A', 'B', 'B']]], dtype='<U1')"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]"
+    "\n",
+    "f_char = np.empty(f.shape, dtype=str) # \"copy\" shape of f but use str instead of float\n",
+    "\n",
+    "f_char[(d == d_min)] = \"A\"\n",
+    "f_char[(d > d_min) & (d < d_mean)] = \"B\"\n",
+    "f_char[(d == d_mean)] = \"C\"\n",
+    "f_char[(d > d_mean) & (d < d_max)] = \"D\"\n",
+    "f_char[(d == d_max)] = \"E\"\n",
+    "\n",
+    "# this technique is called boolen indexing\n",
+    "\n",
+    "\n",
+    "\n",
+    "f_char"
    ]
   }
  ],
@@ -374,7 +640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
